[package]
name = "password-store"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
dialoguer = "0.11.0"
dirs-next = "2.0.0"
serde = {version="1.0.195", features = ["derive"]}
serde_json = "1.0.111"
simple_crypt = "0.2.3"

